--- a/notebook/ex1.ipynb
+++ b/notebook/ex1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,16 +21,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'d:\\\\GIT\\\\Challenge\\\\bike_share_project'"
+       "'d:\\\\GIT\\\\Challenge\\\\bike_share_project\\\\notebook'"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -59,7 +59,7 @@
        "'d:\\\\GIT\\\\Challenge\\\\bike_share_project'"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +79,7 @@
        "['config.yaml']"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -99,7 +99,7 @@
        "'config\\\\config.yaml'"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -136,7 +136,7 @@
        " 'ingested_test_dir': 'test'}"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,16 +157,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'d:\\\\GIT\\\\Challenge\\\\bike_share_project\\\\notebook\\\\sharing\\\\artifact'"
+       "'d:\\\\GIT\\\\Challenge\\\\bike_share_project\\\\sharing\\\\artifact'"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -177,6 +177,89 @@
     "artifact = os.path.join(ROOT_DIR, training_pipeline_config[TRAINING_PIPELINE_NAME_KEY],\n",
     "                        training_pipeline_config[TRAINING_PIPELINE_ARTIFACT_DIR_KEY])\n",
     "artifact"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sharing.config.configuration import Configuartion"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "config = Configuartion(config_file_path=\"d:\\\\GIT\\\\Challenge\\\\bike_share_project\\\\config\\\\config.yaml\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "TrainingPipelineConfig(artifact_dir='d:\\\\GIT\\\\Challenge\\\\bike_share_project\\\\sharing\\\\artifact')"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "config.get_training_pipeline_config()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'dataset_download_url': 'https://archive.ics.uci.edu/ml/machine-learning-databases/00275/',\n",
+       " 'raw_data_dir': 'raw_data',\n",
+       " 'tgz_download_dir': 'tgz_data',\n",
+       " 'ingested_dir': 'ingested_data',\n",
+       " 'ingested_train_dir': 'train',\n",
+       " 'ingested_test_dir': 'test'}"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "config.config_info[DATA_INGESTION_CONFIG_KEY]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DataIngestionConfig(dataset_download_url='https://archive.ics.uci.edu/ml/machine-learning-databases/00275/', tgz_download_dir='d:\\\\GIT\\\\Challenge\\\\bike_share_project\\\\sharing\\\\artifact\\\\data_ingestion\\\\2022-07-12-21-41-52\\\\tgz_data', raw_data_dir='d:\\\\GIT\\\\Challenge\\\\bike_share_project\\\\sharing\\\\artifact\\\\data_ingestion\\\\2022-07-12-21-41-52\\\\raw_data', ingested_train_dir='d:\\\\GIT\\\\Challenge\\\\bike_share_project\\\\sharing\\\\artifact\\\\data_ingestion\\\\2022-07-12-21-41-52\\\\ingested_data\\\\train', ingested_test_dir='d:\\\\GIT\\\\Challenge\\\\bike_share_project\\\\sharing\\\\artifact\\\\data_ingestion\\\\2022-07-12-21-41-52\\\\ingested_data\\\\test')"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "config.get_data_ingestion_config()"
    ]
   },
   {
