--- a/notebook/test.ipynb
+++ b/notebook/test.ipynb
@@ -2,328 +2,341 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
-    "pth = r\"D:\\GIT\\Challenge\\bike_share_project\\sharing\\artifact\\data_ingestion\\2022-07-14-07-31-02\\raw_data\\hours.csv\"\n"
+    "from threading import Thread\n",
+    "import time"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "class Demo(Thread):\n",
+    "    def __init__(self):\n",
+    "        super().__init__(daemon=False,name=\"demo_thread\")\n",
+    "    \n",
+    "    def print_msg(self):\n",
+    "        time.sleep(5)\n",
+    "        print(\"I was called by thread\")\n",
+    "        \n",
+    "    def run(self):\n",
+    "        self.print_msg()\n",
+    "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>season</th>\n",
-       "      <th>year</th>\n",
-       "      <th>month</th>\n",
-       "      <th>hour</th>\n",
-       "      <th>holiday</th>\n",
-       "      <th>weekday</th>\n",
-       "      <th>workingday</th>\n",
-       "      <th>weather</th>\n",
-       "      <th>temp</th>\n",
-       "      <th>humidity</th>\n",
-       "      <th>windspeed</th>\n",
-       "      <th>count</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>6</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.24</td>\n",
-       "      <td>0.81</td>\n",
-       "      <td>0.0000</td>\n",
-       "      <td>16</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>6</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.22</td>\n",
-       "      <td>0.80</td>\n",
-       "      <td>0.0000</td>\n",
-       "      <td>40</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>6</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.22</td>\n",
-       "      <td>0.80</td>\n",
-       "      <td>0.0000</td>\n",
-       "      <td>32</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0</td>\n",
-       "      <td>6</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.24</td>\n",
-       "      <td>0.75</td>\n",
-       "      <td>0.0000</td>\n",
-       "      <td>13</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>4</td>\n",
-       "      <td>0</td>\n",
-       "      <td>6</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.24</td>\n",
-       "      <td>0.75</td>\n",
-       "      <td>0.0000</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17374</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>12</td>\n",
-       "      <td>19</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0.26</td>\n",
-       "      <td>0.60</td>\n",
-       "      <td>0.1642</td>\n",
-       "      <td>119</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17375</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>12</td>\n",
-       "      <td>20</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0.26</td>\n",
-       "      <td>0.60</td>\n",
-       "      <td>0.1642</td>\n",
-       "      <td>89</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17376</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>12</td>\n",
-       "      <td>21</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.26</td>\n",
-       "      <td>0.60</td>\n",
-       "      <td>0.1642</td>\n",
-       "      <td>90</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17377</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>12</td>\n",
-       "      <td>22</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.26</td>\n",
-       "      <td>0.56</td>\n",
-       "      <td>0.1343</td>\n",
-       "      <td>61</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17378</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>12</td>\n",
-       "      <td>23</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.26</td>\n",
-       "      <td>0.65</td>\n",
-       "      <td>0.1343</td>\n",
-       "      <td>49</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>17379 rows × 12 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       season  year  month  hour  holiday  weekday  workingday  weather  temp  \\\n",
-       "0           1     0      1     0        0        6           0        1  0.24   \n",
-       "1           1     0      1     1        0        6           0        1  0.22   \n",
-       "2           1     0      1     2        0        6           0        1  0.22   \n",
-       "3           1     0      1     3        0        6           0        1  0.24   \n",
-       "4           1     0      1     4        0        6           0        1  0.24   \n",
-       "...       ...   ...    ...   ...      ...      ...         ...      ...   ...   \n",
-       "17374       1     1     12    19        0        1           1        2  0.26   \n",
-       "17375       1     1     12    20        0        1           1        2  0.26   \n",
-       "17376       1     1     12    21        0        1           1        1  0.26   \n",
-       "17377       1     1     12    22        0        1           1        1  0.26   \n",
-       "17378       1     1     12    23        0        1           1        1  0.26   \n",
-       "\n",
-       "       humidity  windspeed  count  \n",
-       "0          0.81     0.0000     16  \n",
-       "1          0.80     0.0000     40  \n",
-       "2          0.80     0.0000     32  \n",
-       "3          0.75     0.0000     13  \n",
-       "4          0.75     0.0000      1  \n",
-       "...         ...        ...    ...  \n",
-       "17374      0.60     0.1642    119  \n",
-       "17375      0.60     0.1642     89  \n",
-       "17376      0.60     0.1642     90  \n",
-       "17377      0.56     0.1343     61  \n",
-       "17378      0.65     0.1343     49  \n",
-       "\n",
-       "[17379 rows x 12 columns]"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df = pd.read_csv(pth)\n",
-    "df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 17379 entries, 0 to 17378\n",
-      "Data columns (total 12 columns):\n",
-      " #   Column      Non-Null Count  Dtype  \n",
-      "---  ------      --------------  -----  \n",
-      " 0   season      17379 non-null  int64  \n",
-      " 1   year        17379 non-null  int64  \n",
-      " 2   month       17379 non-null  int64  \n",
-      " 3   hour        17379 non-null  int64  \n",
-      " 4   holiday     17379 non-null  int64  \n",
-      " 5   weekday     17379 non-null  int64  \n",
-      " 6   workingday  17379 non-null  int64  \n",
-      " 7   weather     17379 non-null  int64  \n",
-      " 8   temp        17379 non-null  float64\n",
-      " 9   humidity    17379 non-null  float64\n",
-      " 10  windspeed   17379 non-null  float64\n",
-      " 11  count       17379 non-null  int64  \n",
-      "dtypes: float64(3), int64(9)\n",
-      "memory usage: 1.6 MB\n"
+      "Creating object of Demo\n",
+      "Starting Demo Thread\n",
+      " Demo Thread Started\n",
+      "I was called by thread\n",
+      " Demo Thread Completed\n"
      ]
     }
    ],
    "source": [
-    "df.info()"
+    "print(\"Creating object of Demo\")\n",
+    "d = Demo()\n",
+    "print(\"Starting Demo Thread\")\n",
+    "d.start()\n",
+    "print(\" Demo Thread Started\")\n",
+    "d.join()\n",
+    "print(\" Demo Thread Completed\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a= Demo()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Im waiting for prnt msg to complete\n",
+      "I was called by thread\n"
+     ]
+    }
+   ],
+   "source": [
+    "a.start()\n",
+    "print(\"Im waiting for prnt msg to complete\")\n",
+    "a.join()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I was called by thread\n",
+      "Im waiting for prnt msg to complete\n"
+     ]
+    }
+   ],
+   "source": [
+    "a.print_msg()\n",
+    "print(\"Im waiting for prnt msg to complete\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Index(['season', 'year', 'month', 'hour', 'holiday', 'weekday', 'workingday',\n",
-       "       'weather', 'temp', 'humidity', 'windspeed', 'count'],\n",
-       "      dtype='object')"
+       "'d:\\\\GIT'"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.columns"
+    "os.getcwd()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "os.chdir(os.pardir)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "config_file_path = os.path.join(os.getcwd(),\"config\",\"config.yaml\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sharing.pipeline.pipeline import Pipeline\n",
+    "from sharing.config.configuration import Configuartion"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "config = Configuartion(config_file_path=\"d:\\\\GIT\\\\Challenge\\\\bike_share_project\\\\config\\\\config.yaml\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "TrainingPipelineConfig(artifact_dir='d:\\\\GIT\\\\Challenge\\\\bike_share_project\\\\sharing\\\\artifact')"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "config.get_training_pipeline_config()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pipe = Pipeline(config=config)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Experiment(experiment_id=None, initialization_timestamp=None, artifact_time_stamp=None, running_status=None, start_time=None, stop_time=None, execution_time=None, message=None, experiment_file_path=None, accuracy=None, is_model_accepted=None)"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pipe.experiment"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Experiment(experiment_id=None, initialization_timestamp=None, artifact_time_stamp=None, running_status=None, start_time=None, stop_time=None, execution_time=None, message=None, experiment_file_path=None, accuracy=None, is_model_accepted=None)"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Pipeline.experiment"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pipe1 = Pipeline(config=config)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "RuntimeError",
+     "evalue": "threads can only be started once",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_1956\\2570449608.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mpipe1\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mstart\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32md:\\GIT\\Challenge\\bike_share_project\\venv\\lib\\threading.py\u001b[0m in \u001b[0;36mstart\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m    841\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    842\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_started\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mis_set\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 843\u001b[1;33m             \u001b[1;32mraise\u001b[0m \u001b[0mRuntimeError\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"threads can only be started once\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    844\u001b[0m         \u001b[1;32mwith\u001b[0m \u001b[0m_active_limbo_lock\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    845\u001b[0m             \u001b[0m_limbo\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mRuntimeError\u001b[0m: threads can only be started once"
+     ]
+    }
+   ],
+   "source": [
+    "pipe1.start()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Experiment(experiment_id=None, initialization_timestamp=None, artifact_time_stamp=None, running_status=None, start_time=None, stop_time=None, execution_time=None, message=None, experiment_file_path=None, accuracy=None, is_model_accepted=None)"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pipe1.experiment"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Experiment(experiment_id=None, initialization_timestamp=None, artifact_time_stamp=None, running_status=None, start_time=None, stop_time=None, execution_time=None, message=None, experiment_file_path=None, accuracy=None, is_model_accepted=None)"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Pipeline.experiment"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pipe1 = Pipeline(config=config)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Experiment(experiment_id='c80dbd91-7d3e-4acf-978b-e5003070b6f6', initialization_timestamp='2022-07-17-14-13-01', artifact_time_stamp='2022-07-17-14-13-01', running_status=True, start_time=datetime.datetime(2022, 7, 17, 14, 25, 42, 275186), stop_time=None, execution_time=None, message='Pipeline has been started.', experiment_file_path='d:\\\\GIT\\\\Challenge\\\\bike_share_project\\\\sharing\\\\artifact\\\\experiment\\\\experiment.csv', accuracy=None, is_model_accepted=None)"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pipe1.experiment"
    ]
   },
   {
