add reports page

--- a/notebook/test1.ipynb
+++ b/notebook/test1.ipynb
@@ -590,6 +590,100 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sharing.constant import CONFIG_DIR, get_current_time_stamp\n",
+    "ROOT_DIR = os.getcwd()\n",
+    "LOG_FOLDER_NAME = \"logs\"\n",
+    "PIPELINE_FOLDER_NAME = \"housing\"\n",
+    "SAVED_MODELS_DIR_NAME = \"saved_models\"\n",
+    "MODEL_CONFIG_FILE_PATH = os.path.join(ROOT_DIR, CONFIG_DIR, \"model.yaml\")\n",
+    "LOG_DIR = os.path.join(ROOT_DIR, LOG_FOLDER_NAME)\n",
+    "PIPELINE_DIR = os.path.join(ROOT_DIR, PIPELINE_FOLDER_NAME)\n",
+    "MODEL_DIR = os.path.join(ROOT_DIR, SAVED_MODELS_DIR_NAME)\n",
+    "HOUSING_DATA_KEY = \"housing_data\"\n",
+    "MEDIAN_HOUSING_VALUE_KEY = \"median_house_value\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'d:\\\\GIT\\\\bike_share_project\\\\notebook\\\\config\\\\model.yaml'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "MODEL_CONFIG_FILE_PATH"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "SAVED_MODELS_DIR_NAME = \"saved_models\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "file count: 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "\n",
+    "count = 0\n",
+    "for root_dir, cur_dir, files in os.walk(LOG_FOLDER_NAME):\n",
+    "    count += len(files)\n",
+    "print('file count:', count)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "file count: 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "\n",
+    "count = 0\n",
+    "\n",
+    "for path in os.scandir(LOG_FOLDER_NAME):\n",
+    "    if path.is_file():\n",
+    "        count += 1\n",
+    "print('file count:', count)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
