--- a/notebook/test1.ipynb
+++ b/notebook/test1.ipynb
@@ -845,18 +845,11 @@
    "source": [
     "str[year]+'-'+month+'-'+date+'-'+min+'-'+sec+'-'+milli_sec+'/'"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.7.13 (conda)",
+   "display_name": "Python 3.9.7 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -870,12 +863,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.13"
+   "version": "3.9.7"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "569dcb05d44bc29cd4e430f1c5cbe604bb55bec112d7a630ab25cc047c4eb60a"
+    "hash": "1642bd7652460feb32553481f4294aceb958439ec7b036cbcd942a84911bff09"
    }
   }
  },
